--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,8 @@
     <input type="text" id="keywords" name="keywords" required>
     <button type="submit">Check Keywords</button>
   </form>
-  <div id="result"></div>
+  <div id="missing-keywords" class="result-box"></div>
+  <div id="present-keywords" class="result-box"></div>
   <script src="popup.js"></script>
 </body>
 </html>
